Fix UnsupportedOperationException when sorting segments in auto compaction (#72)